--- a/7/styles/styles.css
+++ b/7/styles/styles.css
@@ -2,7 +2,7 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
-  src: url("fonts/pt-sans-regular.woff2") format("woff2");
+  src: url("../fonts/ptsans-400.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -10,7 +10,7 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
-  src: url("fonts/pt-sans-bold.woff2") format("woff2");
+  src: url("../fonts/ptsans-700.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -29,6 +29,64 @@ body {
   line-height: 21px;
   color: #000000;
   background-color: #ffffff;
+}
+
+.button:hover {
+  background-color: #615048;
+}
+
+.button:focus {
+  background-color: #615048;
+} 
+
+.button:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #615048;
+}
+
+.button:disabled {
+  color: #ffffff;
+  background-color: #E5E5E5;
+  cursor: default;
+} 
+
+.product-card-button:hover {
+  background-color: #68A2CA;
+}
+
+.product-card-button:focus {
+  background-color: #82B3D3;
+}
+
+.product-card-button:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #82B3D3;
+}
+
+.product-card-button-current:hover {
+  background-color: #6C9E42;
+}
+
+.product-card-button-current:focus {
+  background-color: #6C9E42;
+}
+
+.product-card-button-current:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #7DB54F;
+}
+
+.blue-button:hover {
+  background-color: #68A2CA;
+}
+
+.blue-button:focus {
+  background-color: #82B3D3;
+}
+
+.blue-button:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #82B3D3;
 }
 
 .visually-hidden {
@@ -60,6 +118,10 @@ body {
   cursor: pointer;
 }
 
+.blue-button {
+  background-color: #82B3D3;
+}
+
 .rgba {
   background: rgba(131, 179, 211, 0.12);
 }
@@ -76,12 +138,18 @@ body {
 .navigation {
   display: flex;
   width: 1060px;
+  margin: 0;
   margin: 0 auto;
 }
 
 .navigation-logo {
   width: 140px;
   margin-right: 30px;
+}
+
+.page-header-logo {
+  margin-bottom: -10px;
+  position: relative;
 }
 
 .navigation-list {
@@ -112,6 +180,16 @@ body {
   text-decoration: none;
 }
 
+.navigation-link-current::before {
+  position: absolute;
+  right: 20px;
+  bottom: 0;
+  left: 20px;
+  height: 2px;
+  background-color: #756257;
+  content: "";
+}
+
 .navigation-icon {
   position: absolute;
   top: 0;
@@ -119,7 +197,19 @@ body {
   bottom: 0;
   left: 0;
   margin: auto;
-  fill: #dbdbdb;
+  fill: #000000;
+}
+
+.navigation-link:hover .navigation-icon {
+  fill: #756257;
+}
+
+/* .navigation-link:focus .navigation-icon {
+  fill: rgba(117, 97, 87, 0.3);
+} */
+
+.navigation-link:active .navigation-icon {
+  fill: rgba(117, 97, 87, 0.3);
 }
 
 .navigation-item-basket {
@@ -157,7 +247,7 @@ body {
 }
 
 .main-background {
-  background-image: url("/images/main/main-mask.svg"), url("/images/main/index-background.jpg");
+  background-image: url("../images/main/main-mask.svg"), url("../images/main/index-background.jpg");
   height: 485px;
   background-position: bottom;
   background-color: #b9b7b6;
@@ -212,7 +302,7 @@ body {
 .advantages-item-img {
   width: 800px;
   height: 384px;
-  background-image: url("/images/main/real-town.jpg");
+  background-image: url("../images/main/real-town.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
@@ -225,7 +315,7 @@ body {
 }
 
 .advantages-title {
-  margin-top: 92px;
+  margin-top: 88px;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 24px;
@@ -272,6 +362,7 @@ body {
 
 .advantages-title-with-picture {
   margin-top: 182px;
+  margin-bottom: 30px;
 }
 
 .advantages-description-with-picture {
@@ -279,27 +370,37 @@ body {
 }
 
 .advantages-picture-house {
+  background-image: url("../images/main/vector-house.svg");
+  background-repeat: no-repeat;
   position: absolute;
   width: 75px;
   height: 72px;
   left: 162px;
   top: 80px;
+  bottom: 232px;
+  margin: 0;
 }
 
 .advantages-picture-food {
+  background-image: url("../images/main/food.svg");
+  background-repeat: no-repeat;
   position: absolute;
   width: 75px;
   height: 71px;
   left: 163px;
   top: 81px;
+  margin: 0;
 }
 
 .advantages-picture-souvenirs {
+  background-image: url("../images/main/souvenirs.svg");
+  background-repeat: no-repeat;
   position: absolute;
   width: 65px;
   height: 77px;
   left: 168px;
   top: 78px; 
+  margin: 0;
 } 
 
 .advantages-title-without-picture {
@@ -342,7 +443,7 @@ body {
 }
 
 .newsletter {
-  background-image: url("/images/footer/background-subscribe.jpg");
+  background-image: url("../images/footer/background-subscribe.jpg");
   background-color: #b9b7b6;
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -371,24 +472,15 @@ body {
   background-position: center;
 }
 
-.footer-social-vk {
-  background-image: url("/images/footer/social-vkontakte.svg"); 
-  background-size: 24px 14px;
-}
-
-.footer-social-tg {
-  background-image: url("/images/footer/social-telegram.svg");
-  background-size: 18px 15px;
-}
-
-.footer-social-yt {
-  background-image: url("/images/footer/social-youtube.svg");
-  background-size: 22px 17px;
-}
-
 .footer-contacts-address {
   width: 350px;
   margin: 0 auto;
+}
+
+.footer-social-item-link {
+  display: block;
+  height: 40px;
+  width: 47px;
 }
 
 .footer-htmlacademy-link {
@@ -422,9 +514,9 @@ body {
   
 }
 
-.newsletter-button {
+/* .newsletter-button {
   background: #82B3D3;
-}
+} */
 
 .footer-contacts-address-phone a {
   color: #000000;
@@ -441,7 +533,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   flex-direction: column;
-  background-image: url("/images/filter-content/filter.jpg");
+  background-image: url("../images/filter-content/filter.jpg");
   background-color: #b9b7b6;
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -480,7 +572,6 @@ body {
 
 .select-control {
   display: flex;
-
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -501,7 +592,7 @@ body {
 .catalog-button {
   display: flex;
   width: 180px;
-  margin-left: auto;
+   margin-left: auto; 
 }
 
 .card-grid-toggle{
@@ -513,10 +604,50 @@ body {
   margin-right: 8px;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
+  padding: 16px 17px;
+}
+
+.card-grid-toggle-icon-table {
+  display: block;
+  background-image: url("../images/filter-content/icon-table.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 16px;
+  height: 14px;
+}
+
+.card-grid-toggle-icon-slideshow {
+  display: block;
+  background-image: url("../images/filter-content/icon-slideshow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 16px;
+  height: 14px;
+}
+
+.card-grid-toggle-icon-list {
+  display: block;
+  background-image: url("../images/filter-content/icon-list.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 16px;
+  height: 14px;
 }
 
 .card-grid-toggle-current {
   border: 2px solid #000000;
+}
+
+.card-grid-toggle:hover {
+  border-color: #68A2CA; 
+}
+
+/*.card-grid-toggle:focus {
+  border-color: #68A2CA; 
+} */
+
+.card-grid-toggle:active {
+  border-color: #000000; 
 }
 
 /* .product-list-hotel {
@@ -632,15 +763,46 @@ body {
   margin-bottom: 10px;
 }
 
+.breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  align-items: center;
+  padding: 0;
+  list-style-type: none;
+}
+
 .breadcrumbs-link {
   text-transform: capitalize;
+  margin-right: 10px;
   text-decoration: none;
   color: #FFFFFF;;
 }
 
 .breadcrumbs-item {
+  display: flex;
+  align-items: center;
   font-weight: 400;
   font-size: 16px;
+}
+
+.breadcrumbs-item:not(:last-child)::after {
+  display: block;
+  background-image: url("../images/filter-content/breadcrumbs-arrow.svg");
+  background-repeat: no-repeat;
+  width: 6px;
+  height: 9px;
+  margin: 0;
+  content: " ";
+}
+
+.breadcrumbs-link-home {
+  display: block;
+  background-image: url("../images/filter-content/union-home.svg");
+  background-repeat: no-repeat;
+  width: 13px;
+  height: 13px;
+  
 }
 
 .catalog-filter-list {
@@ -657,10 +819,6 @@ body {
 .catalog-filter-item {
   font-weight: 400;
   list-style-type: none;
-}
-
-.button-apply {
-  background: #82B3D3;
 }
 
 .product-card-link{
@@ -726,17 +884,19 @@ body {
 }
 
 .product-card-button {
-  background: #82B3D3;
+  background-color: #82B3D3;
   grid-column: 2 / 3;
+  padding: 9px 8px;
 }
 
 .product-card-button-current {
-  background: #7DB54F;
+  background-color: #7DB54F;
 }
 
 .rating-star {
   position: relative;
   margin: 0;
+  align-self: center;
   grid-column: 1 / 2;
 } 
 
@@ -766,6 +926,11 @@ body {
 .rating-number {
   margin: 0;
   font-weight: 400;
+  padding: 9px 16px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
   color: #333333;
   background: #F2F2F2;
   grid-column: 2 / 3;
@@ -804,16 +969,9 @@ body {
   text-align: center;
 }
 
-.breadcrumbs {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 40px;
-  padding: 0;
-  list-style-type: none;
-}
 
 /* .breadcrumbs-arrow {
-  background-image: url("/images/filter-content/vector-catalog-galo4ka.svg");
+  background-image: url("../images/filter-content/vector-catalog-galo4ka.svg");
   background-repeat: no-repeat;
   background-size: 100% auto;
 } */
@@ -828,6 +986,7 @@ body {
 
 .footer-social-list {
   display: flex;
+  position: relative;
   flex-wrap: wrap; 
   margin: 0;
   padding: 0;
@@ -842,27 +1001,80 @@ body {
 }
 
 .footer-social-vk {
-  background-image: url("/images/footer/social-vkontakte.svg"); 
+  position: absolute;
   background-repeat: no-repeat;
+  top: 13px;
+  left: 11px;
 }
 
 .footer-social-tg {
-  background-image: url("/images/footer/social-telegram.svg");
+  position: absolute;
   background-repeat: no-repeat;
+  top: 12px;
+  left: 62px;
 }
 
 .footer-social-yt {
-  background-image: url("/images/footer/social-youtube.svg");
+  position: absolute;
   background-repeat: no-repeat;
+  top: 12px;
+  left: 107px;
+} 
+.footer-social-icon {
+  fill: #82B3D3;
 }
 
-.navigation-item-basket {
-  /* background-image: url("/images/header/favorite.svg");
-  background-repeat: no-repeat; */
-
+.footer-social-item:hover .footer-social-icon {
+  fill: #68A2CA;
 }
 
-.navigation-item-search {
-  /* background-image: url("/images/header/search.svg");
-  background-repeat: no-repeat; */
+.footer-social-item:focus .footer-social-icon {
+  fill: #68A2CA;
+}
+
+.footer-social-item:active .footer-social-icon {
+  fill: rgba(104, 162, 202, 0.3);
+}
+
+.footer-contacts-address:hover .footer-contacts-address-phone {
+  color: #756157;
+}
+
+.footer-contacts-address:focus .footer-contacts-address-phone {
+  color: #756157;
+}
+
+.footer-contacts-address:active .footer-contacts-address-phone {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.footer-htmlacademy-link:hover .htmlacademy-link {
+  fill: #756157;
+}
+
+.footer-htmlacademy-link:focus .htmlacademy-link {
+  fill: #756157;
+}
+
+.footer-htmlacademy-link:active .htmlacademy-link {
+  fill: rgba(117, 97, 87, 0.3);
+}
+
+.star {
+  display: block;
+  background-image: url("../images/hotel/vector-star.svg");
+  width: 24px;
+  height: 17px;
+}
+
+.star-4 {
+  width: 96px;
+}
+
+.star-3 {
+  width: 72px;
+}
+
+.star-2 {
+  width: 48px;
 }
