--- a/styles/styles.css
+++ b/styles/styles.css
@@ -426,7 +426,7 @@ body {
 }
 
 .appointment-description {
-  margin-top: 29px;
+  margin-top: 2px;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
@@ -434,7 +434,7 @@ body {
 }
 
 .appointment-button {
-  margin-top: 56px;
+  margin-top: 34px;
   margin-bottom: 93px;
   width: 574px;
   padding: 12px;
@@ -570,7 +570,7 @@ body {
   margin: 0;
 }
 
-.select-control {
+/* .select-control {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -581,6 +581,33 @@ body {
   border: 2px solid #E5E5E5;
   border-radius: 4px;
   padding: 14px 20px;
+
+} */
+
+.select-control {
+  width: 100%;
+  margin: 0;
+  padding: 14px 24px;
+  padding-right: 130px;
+  font: inherit;
+  font-weight: 400;
+  color: #333333;
+  background-color: #ffffff;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+  background-image: url("../images/filter-content/vector-catalog-galo4ka.svg");
+  background-repeat: no-repeat;
+  background-position: right 16px center;
+  appearance: none;
+}
+
+.select-control:hover,
+.select-control:focus {
+  border: 2px solid #68A2CA;
+}
+
+.select-control:active {
+  border: 2px solid #3F5E72;
 }
 
 /* .svg-galochka {
@@ -744,9 +771,8 @@ body {
 }
 
 .number-offers-found {
-  width: 160px;
-  border: 2px solid #E5E5E5;
-  border-radius: 4px;
+  width: 163px;
+  padding-left: 20px;
 }
 
 .inner-header {
@@ -779,6 +805,11 @@ body {
   color: #FFFFFF;;
 }
 
+.breadcrumbs-link:hover {
+  color: rgba(255, 255, 255, 0.6);
+  cursor: pointer;
+}
+
 .breadcrumbs-item {
   display: flex;
   align-items: center;
@@ -802,14 +833,235 @@ body {
   background-repeat: no-repeat;
   width: 13px;
   height: 13px;
+}
+
+.catalog-filter-group {
+  margin: 0;
+  padding: 0;
+  border: none;
+  margin-bottom: 70px;
+}
+
+.control {
+  position: relative;
+  display: block;
+  padding-left: 40px;
+}
+
+.control-mark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border: none;
+  border-radius: 25%;
+  background-color: #FFFFFF;
+}
+
+.control:hover .control-mark,
+.control:active .control-mark {
+  background: rgba(255, 255, 255, 0.6);
+}
+.control:focus .control-mark {
+  outline: 3px solid #83B3D3;
+  border-radius: 4px;
+}
+
+.control-input:disabled + .control-mark {
   
 }
 
+.control-input-housing-type:focus .control-mark {
+  border: 3px solid #83B3D3;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::before{
+  display: block;
+  position: relative;
+  background-image: url("../images/filter-content/vector-galo4ka.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 10px;
+  width: 13px;
+  padding-left: 8px;
+  padding-top: 11px;
+  content: " ";
+}
+
+.control-input[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+
+.control-input[type="radio"]:checked + .control-mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3F5E72;;
+  border-radius: 50%;
+  content: "";
+}
+
+.catalog-filter-range-group {
+  margin-left: 170px;
+  margin-bottom: 70px;
+}
+
+.range-scale {
+  position: relative;
+  height: 4px;
+  margin: 0;
+  margin-top: 32px;
+  background-color: #ffffff48;
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #FFFFFF;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border: 2px solid #FFFFFF;
+  border-radius: 25%;
+  cursor: pointer;
+}
+
+.range-toggle:hover,
+.range-toggle:focus {
+  outline: 3px solid #83B3D3;
+}
+
+.range-toggle:active {
+  outline: 2px solid #83B3D3;
+} 
+
+.toggle-min {
+  top: -8px;
+  left: 0px;
+}
+
+.toggle-max {
+  top: -8px;
+  right: -20px;
+}
+
+.range-wrapper-inputs {
+  display: flex;
+  justify-content: center;
+}
+
+.catalog-filter-label {
+  display: flex;
+  justify-content: space-between;
+  width: 105px;
+  padding-right: 14px;
+  margin: 0;
+  border: 2px solid #FFFFFF;
+  border-radius: 10px 0px 0px 10px;
+  padding-top: 14px;
+  padding-left: 19px;
+  padding-bottom: 14px;
+}
+
+.filter-label-second{
+  border-radius: 0px 10px 10px 0px;
+}
+
+.catalog-filter-label:hover {
+  opacity: 0.6;
+  border: 2px solid #FFFFFF;
+}
+.catalog-filter-label:focus {
+  border: 2px solid #FFFFFF;
+  box-shadow: 0px 0px 0px 3px #81B3D2;
+}
+
+.catalog-filter-label:active {
+  background: #756257;
+}
+
+.filter-description{
+  margin: 0;
+  color: #FFFFFF;
+  opacity: 0.3;
+}
+
+.range-input {
+  width: 40px;
+  font: inherit;
+  color: #FFFFFF;
+  background-color: transparent;
+  border: none;
+  appearance: textfield;
+}
+
+.range-input::-webkit-outer-spin-button,
+.range-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.catalog-filter-button {
+  display: flex;
+  flex-direction: column;
+  width: 160px;
+  margin: 0;
+  padding: 0;
+  margin-top: 60px;
+  margin-left: 70px;
+}
+
+.catalog-filter-blue-button {
+  padding: 14px 15px;
+  margin-bottom: 3px;
+}
+
+.catalog-filter-reset-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 14px 15px;
+  background-color: transparent;
+  border: none;
+  color: #FFFFFF;
+}
+
+.catalog-filter-reset-button:focus {
+  border: 3px solid #83B3D3;
+  border-radius: 4px;
+}
+
+.catalog-filter-reset-button:hover,
+.catalog-filter-reset-button:active {
+  opacity: 0.6;
+}
+
+.catalog-filter-reset-button:disabled {
+  color: #ffffff;
+  background-color: #E5E5E5;
+  cursor: default;
+}
+
 .catalog-filter-list {
+  list-style-type: none;
+  margin: 0;
   padding: 0;
 }
 
+.catalog-filter-housing-type {
+  margin: 0;
+  padding-right: 70px;
+}
+  
 .catalog-filter-title {
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
@@ -817,6 +1069,7 @@ body {
 }
 
 .catalog-filter-item {
+  margin-bottom: 15px;
   font-weight: 400;
   list-style-type: none;
 }
@@ -900,7 +1153,7 @@ body {
   grid-column: 1 / 2;
 } 
 
-.img-star {
+/* .img-star {
   position: absolute;
   top: 10px;
   width: 18px;
@@ -921,7 +1174,7 @@ body {
 
 .img-star:nth-child(4) {
   left: 72px;
-}
+} */
 
 .rating-number {
   margin: 0;
@@ -1077,4 +1330,70 @@ body {
 
 .star-2 {
   width: 48px;
+}
+
+.form-button {
+  border-radius: 0px 10px 10px 0px;
+}
+
+.field {
+  margin: 0;
+  padding: 20px 22px;
+  width: 600px;
+  font: inherit;
+  font-weight: 400;
+  background: #F2F2F2;
+  border-radius: 10px 0px 0px 10px;
+  border: 0;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  background-color: #ffffff;
+}
+
+.modal-auth {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 62px;
+  padding-bottom: 63px;
+  width: 751px;
+  border-radius: 30px;
+  
+}
+
+.modal-close-button {
+  width: 53px;
+  height: 53px;
+  background-color: #F2F2F2;
+  border-radius: 50%; 
+  border: none;
+  cursor: pointer;
+} 
+
+.modal-title {
+  text-transform: uppercase;
+}
+
+.modal-form-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 62px;
+  padding-bottom: 63px;
+  width: 751px;
+  border-radius: 30px;
 }
