--- a/styles/styles.css
+++ b/styles/styles.css
@@ -451,6 +451,13 @@ body {
   text-align: center;
 }
 
+.field.field-newsletter {
+  width: 600px;
+  border-radius: 10px 0px 0px 10px;
+  padding: 20px 22px;
+
+}
+
 .page-footer-container {
   display: flex;
   justify-content: space-between;
@@ -1338,12 +1345,11 @@ body {
 
 .field {
   margin: 0;
-  padding: 20px 22px;
-  width: 600px;
+  padding: 14.5px 19px;
   font: inherit;
   font-weight: 400;
   background: #F2F2F2;
-  border-radius: 10px 0px 0px 10px;
+  border-radius: 4px;
   border: 0;
 }
 
@@ -1356,6 +1362,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
+  overflow-y: auto;
 }
 
 .modal {
@@ -1366,16 +1373,31 @@ body {
 
 .modal-auth {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  flex-direction: column;
+  padding: 70px;
   padding-top: 62px;
-  padding-bottom: 63px;
-  width: 751px;
+  width: 715px;
   border-radius: 30px;
+  box-sizing: border-box;
+  box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.15);
   
 }
 
+.modal-form-description {
+  color: #333333;
+}
+
+.modal-form-description-error {
+  color: #FF5757;
+}
+
 .modal-close-button {
+  position: absolute;
+  background-image: url("../images/modal/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  top: 46px;
+  right: 70px;
   width: 53px;
   height: 53px;
   background-color: #F2F2F2;
@@ -1384,16 +1406,199 @@ body {
   cursor: pointer;
 } 
 
+.modal-close-button:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-close-button:focus {
+  background-color: #E6E6E6;
+  box-shadow: 0 0 0 3px #83B3D3;
+}
+
+.modal-close-button:focus {
+  opacity: 0.3;
+}
+
 .modal-title {
+  margin: 0;
+  padding-right: 55px;
+  margin-bottom: 63px;
   text-transform: uppercase;
 }
 
-.modal-form-container {
+.modal-content {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  
+}
+
+.modal-form-date {
+  display: grid;
+  grid-template-columns: 125px 420px;
+  column-gap: 30px;
+  width: 100%;
+}
+
+.modal-form-label,
+.modal-form-people-label {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  align-self: center;
+}
+
+.modal-form-description {
+  grid-column: 2/-1;
+}
+
+/* .modal-form-people-wrapper {
+  display: flex;
+  justify-content: space-between;
+} */
+
+.modal-form-people-wrapper {
+  display: grid;
+  grid-template-columns: 288px 230px;
+  column-gap: 56px;
+  margin-bottom: 40px;
+}
+
+.modal-form-people-label {
+  display: flex;
   align-items: center;
-  padding-top: 62px;
-  padding-bottom: 63px;
-  width: 751px;
-  border-radius: 30px;
+}
+
+.person-label-text {
+  width: 125px;
+  padding-right: 30px;
+}
+
+.child-label-text {
+  display: flex;
+  justify-content: center;
+  width: 85px;
+  padding-right: 12px;
+  
+}
+
+.people-counter-input {
+  appearance: textfield;
+  width: 133px;
+  box-sizing: border-box;
+  padding-left: 50px;
+  padding-right: 50px;
+  text-align: center;
+}
+
+.people-counter-input::-webkit-outer-spin-button,
+.people-counter-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.people-counter-wrapper {
+  position: relative;
+}
+
+.button-counter {
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  box-sizing: content-box;
+  opacity: 0.3;
+  top: 12.5px;
+
+}
+
+.button-counter:hover {
+  opacity: 1;
+}
+
+.button-counter:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px #83B3D3 inset;
+  border-radius: 4px;
+  opacity: 1;
+}
+
+.button-inc {
+  right: 12.5px;
+  background-image: url("../images/modal/inc.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.button-dec {
+  left: 12.5px;
+  background-image: url("../images/modal/dec.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.tooltip-toggle {
+  position: relative;
+  background-image: url("../images/modal/tooltip.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  margin-left: 5px;
+  background-color: #83B3D3;
+  border: none;
+  cursor: pointer;
+}
+
+.tooltip-toggle:hover .tooltip {
+  visibility: visible;
+
+}
+
+.tooltip {
+  display: block;
+  text-align: left;
+  transform: translateX(-50%);
+  box-sizing: border-box;
+  position: absolute;
+  visibility: hidden;
+  width: 256px;
+  padding: 18px 20px;
+  color: #FFFFFF;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: #333333;
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  top: 44px;
+  z-index: 1;
+}
+
+.blue-button-modal {
+  width: 100%;
+  padding: 12px 26px;
+  line-height: 36px;
+  border-radius: 10px;
+}
+
+.blue-button-modal:hover {
+  background-color: #68A2CA;
+}
+
+.blue-button-modal:not(:active):focus {
+  background-color: #68A2CA;
+  outline: none;
+  box-shadow: 0 0 0 3px #756257;
+}
+
+.blue-button-modal:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.modal-container-close {
+  display: none;
 }
