--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,7 @@ body {
 
 .button:focus {
   background-color: #615048;
+  outline: none;
 } 
 
 .button:active {
@@ -56,7 +57,8 @@ body {
 }
 
 .product-card-button:focus {
-  background-color: #82B3D3;
+  background-color: #68A2CA;
+  outline: none;
 }
 
 .product-card-button:active {
@@ -82,7 +84,8 @@ body {
 }
 
 .blue-button:focus {
-  background-color: #82B3D3;
+  background-color: #68A2CA;
+  outline: none;
 }
 
 .blue-button:active {
@@ -218,10 +221,6 @@ body {
   fill: #756257;
 }
 
-/* .navigation-link:focus .navigation-icon {
-  fill: rgba(117, 97, 87, 0.3);
-} */
-
 .navigation-link:active .navigation-icon {
   fill: rgba(117, 97, 87, 0.3);
 }
@@ -289,15 +288,6 @@ body {
   line-height: 26px;
   text-align: center;
 }
-
-/* .advantages-list {
-  display: flex;
-  justify-content: stretch;
-  flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-} */
 
 .advantages-list {
   display: grid;
@@ -512,7 +502,9 @@ body {
 }
 
 .footer-social-item-link {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 40px;
   width: 47px;
 }
@@ -543,7 +535,6 @@ body {
 
 .page-footer-description-catalog {
   color: #333333;
-  margin-bottom: ;
 }
 
 .newsletter-form {
@@ -552,10 +543,6 @@ body {
   justify-content: center;
   
 }
-
-/* .newsletter-button {
-  background: #82B3D3;
-} */
 
 .footer-contacts-address-phone a {
   color: #000000;
@@ -590,7 +577,6 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  /* width: 1060px; */
 }
 
 .catalog-search {
@@ -610,20 +596,6 @@ body {
   margin: 0;
 }
 
-/* .select-control {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  list-style-type: none;
-  width: 290px;
-  margin-right: auto;
-  border: 2px solid #E5E5E5;
-  border-radius: 4px;
-  padding: 14px 20px;
-
-} */
-
 .select-control {
   margin: 0;
   padding: 13px 18px;
@@ -634,16 +606,12 @@ body {
   background-color: #ffffff;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
-  background-image: url("../images/filter-content/vector-catalog-galo4ka.svg");
+  background-image: url("../images/filter-content/vector-catalog-galochka.svg");
   background-repeat: no-repeat;
   background-position: right 16px center;
   appearance: none;
   margin-left: auto;
   width: 290px;
-}
-
-.sorting-type {
-  
 }
 
 .select-control:hover,
@@ -655,14 +623,9 @@ body {
   border: 2px solid #3F5E72;
 }
 
-/* .svg-galochka {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-} */
-
 .catalog-button {
   display: flex;
+  flex-wrap: wrap;
   width: 160px;
   margin-right: 71px; 
   margin-left: 78px;
@@ -723,29 +686,9 @@ body {
   border-color: #68A2CA; 
 }
 
-/*.card-grid-toggle:focus {
-  border-color: #68A2CA; 
-} */
-
 .card-grid-toggle:active {
   border-color: #000000; 
 }
-
-/* .product-list-hotel {
-  display: flex;
-  margin: 0 auto;
-  width: 1040px;
-  align-content: center;
-  align-items: center;
-} */
-
-/* .product-list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style-type: none;
-  padding-left: 73px;
-  margin-bottom: 66px;
-} */
 
 .product-list {
   display: grid;
@@ -758,10 +701,6 @@ body {
   column-gap: 18px;
 }
 
-/* .product-card {
-  padding: 20px;
-} */
-
 .pagination-line {
   display: flex;
   margin: 0 auto;
@@ -771,28 +710,6 @@ body {
   margin-bottom: 25px;
   border-top: 1px solid #E6E6E6;
 }
-
-/* .product-card-button-flex-box{
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 16px;
-}
-
-.overall-size {
-  width: 140px;
-  display: flex;
-  align-items: center;
-  margin: 0;
-  margin-right: 20px;
-}
-
-.overall-size:nth-child(2n) {
-  margin-right: 0;
-} */
-
-/* .product-card-more {
-  margin-right: 20px;
-} */
 
 .pagination {
   display: flex;
@@ -876,12 +793,21 @@ body {
   text-transform: capitalize;
   margin-right: 10px;
   text-decoration: none;
-  color: #FFFFFF;;
+  color: #FFFFFF;
+  cursor: pointer;
 }
 
 .breadcrumbs-link:hover {
-  color: rgba(255, 255, 255, 0.6);
-  cursor: pointer;
+  opacity: 0.6;
+}
+
+.breadcrumbs-link:active {
+  opacity: 0.3;
+}
+
+.breadcrumbs-link:focus {
+  opacity: 1;
+  outline: none;
 }
 
 .breadcrumbs-item {
@@ -941,10 +867,6 @@ body {
   border-radius: 4px;
 }
 
-.control-input:disabled + .control-mark {
-  
-}
-
 .control-input[type="checkbox"]:focus + .control-mark {
   box-shadow: 0 0 0 3px #83B3D3;
   background-color: rgba(255, 255, 255, 0.6);
@@ -953,7 +875,7 @@ body {
 .control-input[type="checkbox"]:checked + .control-mark::before{
   display: block;
   position: relative;
-  background-image: url("../images/filter-content/vector-galo4ka.svg");
+  background-image: url("../images/filter-content/vector-galochka.svg");
   background-repeat: no-repeat;
   background-position: center;
   height: 10px;
@@ -1119,6 +1041,7 @@ body {
 .catalog-filter-reset-button:focus {
   box-shadow: 0 0 0 3px #83B3D3;
   border-radius: 4px;
+  outline: none;
 }
 
 .catalog-filter-reset-button:hover,
@@ -1174,24 +1097,6 @@ body {
   line-height: 28px;
 } 
 
-/* .hotel-card-price {
-  color: #333333;
-  font-weight: 400;
-} */
-
-/* .product-card-button {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  background: #82B3D3;
-} */
-
-/* .rating-number {
-  font-weight: 400;
-  color: #333333;
-  background: #F2F2F2;
-} */
-
 .product-card-grid-box {
   display: grid;
   grid-template-columns: 140px 140px;
@@ -1236,29 +1141,6 @@ body {
   grid-column: 1 / 2;
 } 
 
-/* .img-star {
-  position: absolute;
-  top: 10px;
-  width: 18px;
-  height: 17px;
-} 
-
-.img-star:nth-child(1) {
-  right: 122px;
-}
-
-.img-star:nth-child(2) {
-  right: 98px;
-}
-
-.img-star:nth-child(3) {
-  right: 74px;
-}
-
-.img-star:nth-child(4) {
-  left: 72px;
-} */
-
 .rating-number {
   font-size: 16px;
   margin: 0;
@@ -1283,12 +1165,6 @@ body {
   color: #333333;
 }
 
-/* .breadcrumbs-arrow {
-  background-image: url("../images/filter-content/vector-catalog-galo4ka.svg");
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-} */
-
 .breadcrumbs-item {
   margin-right: 10px;
 }
@@ -1309,26 +1185,6 @@ body {
   height: 40px;
 }
 
-.footer-social-vk {
-  position: absolute;
-  background-repeat: no-repeat;
-  top: 13px;
-  left: 11px;
-}
-
-.footer-social-tg {
-  position: absolute;
-  background-repeat: no-repeat;
-  top: 12px;
-  left: 62px;
-}
-
-.footer-social-yt {
-  position: absolute;
-  background-repeat: no-repeat;
-  top: 12px;
-  left: 107px;
-} 
 .footer-social-icon {
   fill: #82B3D3;
 }
@@ -1557,11 +1413,6 @@ body {
   margin-top: 8px;
 }
 
-/* .modal-form-people-wrapper {
-  display: flex;
-  justify-content: space-between;
-} */
-
 .modal-form-people-wrapper {
   display: grid;
   grid-template-columns: 288px 230px;
@@ -1662,33 +1513,36 @@ body {
 
 .tooltip-toggle:hover .tooltip {
   visibility: visible;
+}
 
+.tooltip-toggle:hover {
+  background-color: #68A2CA;
 }
 
 .tooltip {
   display: block;
   text-align: left;
-  transform: translateX(-48%);
+  transform: translateX(-50%);
   box-sizing: border-box;
   position: absolute;
   visibility: hidden;
   width: 256px;
-  padding: 18px 18px 18px 22px;
+  padding: 16px 18px 22px 22px;
   color: #FFFFFF;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 21px;
   background-color: #333333;
   box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  top: 39px;
-  padding-bottom: 26px;
+  top: 41px;
+  left: 10px;
   z-index: 1;
 }
 
 .tooltip::before {
   position: absolute;
-  bottom: 126px;
+  bottom: 131px;
   left: 50%;
   width: 18px;
   height: 18px;
@@ -1720,6 +1574,6 @@ body {
   color: rgba(255, 255, 255, 0.3);
 }
 
-/* .modal-container-close {
+.modal-container-close {
   display: none; 
-} */
+}
